--- a/application/admin/view/test/code.html
+++ b/application/admin/view/test/code.html
@@ -11,7 +11,7 @@
         </div>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加二维码','codeAdd.html',800,500)">
+                <button class="layui-btn layui-btn-danger layui-btn-sm" onclick="x_admin_show('添加二维码','codeAdd.html',800,500)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加二维码
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
