--- a/application/admin/view/notice/edit.html
+++ b/application/admin/view/notice/edit.html
@@ -11,7 +11,7 @@
 				<label class="layui-form-label">标&nbsp;&nbsp;&nbsp;题</label>
 				<div class="layui-input-block">
 					<input type="text" id="title" name="title" lay-verify="required|branch_name" autocomplete="off"
-						placeholder="请输入标题" value="{$data.title}" class="layui-input">
+						placeholder="请输入公告标题" value="{$data.title}" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
