--- a/application/admin/view/mechanic/add.html
+++ b/application/admin/view/mechanic/add.html
@@ -1,4 +1,5 @@
 {include file='public/head'}
+
 <body>
 	<style type="text/css" media="screen">
 		header {
@@ -7,11 +8,15 @@
 	</style>
 	<div class="x-body">
 		<div class="layui-form">
-			<div class="layui-form-item">
-				<label class="layui-form-label">姓&nbsp;&nbsp;&nbsp;名</label>
-				<div class="layui-input-block">
-					<input type="text" id="name" name="name" lay-verify="required|name" autocomplete="off"
-						placeholder="请输入姓名" class="layui-input">
+			<div class="layui-inline">
+				<label class="layui-form-label">所属用户</label>
+				<div class="layui-input-inline">
+					<select name="uid" lay-verify="required" lay-search="">
+						<option value="">直接选择或搜索选择</option>
+						{volist name='type4' id = 'vo'}
+						<option value="{$vo.uid}">{$vo.uname}</option>
+						{/volist}
+					</select>
 				</div>
 			</div>
 			<div class="layui-form-item">
@@ -28,18 +33,24 @@
 						placeholder="请输入手机号" class="layui-input">
 				</div>
 			</div>
-			<div class="layui-form-item zc_hide">
-				<label class="layui-form-label">装修公司</label>
-				<div class="layui-input-block">
-					<input type="text" id="company" name="company"  autocomplete="off"
-						placeholder="请输入所在装修公司名称" class="layui-input">
+
+			<div class="layui-inline">
+				<label class="layui-form-label">装饰公司</label>
+				<div class="layui-input-inline">
+					<select name="company" lay-verify="required" lay-search="">
+						<option value="">直接选择或搜索选择</option>
+						{volist name='type4' id = 'vo'}
+						<option value="{$vo.id}">{$vo.nickName}</option>
+						{/volist}
+					</select>
 				</div>
 			</div>
+
 			<div class="layui-form-item zc_hide">
 				<label class="layui-form-label">毕业院校</label>
 				<div class="layui-input-block">
-					<input type="text" id="university" name="university"  autocomplete="off"
-						placeholder="请输入所在装修公司名称" class="layui-input">
+					<input type="text" id="university" name="university" autocomplete="off" placeholder="请输入所在装修公司名称"
+						class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item" id="region">
@@ -75,74 +86,78 @@
 {include file='public/foot'}
 <script type="text/javascript">
 	$(".zc_hide").hide();
-layui.use(['form','layer'], function(){ 
-  	var form = layui.form;
-  	var layer = layui.layer;
-	var type = {$type};
-	console.log(type);
-	if(type == 1){
-		$(".zc_hide").show();
-	}
-  	form.verify({
-		/* name: function (value) {
-			if (value.length < 5) {
-				return '用户名至少得5个字符啊';
-			}
-		} */
-	});
-	/**
-	 * 监听省份选择
-	*/
-	form.on('select(province)',function(data){
-        $.post('/api/region/index', { 
-            code: data.value,
-            type:2 
-        }, function(data){
-            var res = data.data;
-            if(data.code == 0){
-                if(res.length > 0){
-                    var option = '<option value="">请选择市</option>';
-                    res.forEach(function(v,i){
-                        option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
-                    });
-                    $('#city').html(option);
-                    $('#county').html('<option value="">请选择区/县</option>');
-                    form.render('select');
-                }
-            }else{
-                layer.msg(data.msg);
-            }
-        },'json');
-	});
-	/**
-	 * 监听城市选择
-	*/
-	form.on('select(city)',function(data){
-        $.post('/api/region/index', { 
-			code: data.value,
-            type:2 
-        }, function(data){
-            var res = data.data;
-            if(data.code == 0){
-                if(res.length > 0){
-                    var option = '<option value="">请选择区/县</option>';
-                    res.forEach(function(v,i){
-                        option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
-                    });
-                    $('#county').html(option);
-                    form.render('select');
-                }
-            }else{
-                layer.msg(data.msg);
-            }
-        },'json');
-	});
-	/**
-	 * 监听表单提交
-	*/
-	form.on('submit(toSubmit)',function(data){
-		var params = {
-                name: data.field.name,
+	layui.use(['form', 'layer'], function () {
+		var form = layui.form;
+		var layer = layui.layer;
+		var type = {
+			$type
+		};
+		console.log(type);
+		if (type == 1) {
+			$(".zc_hide").show();
+		}
+		form.verify({
+			/* name: function (value) {
+				if (value.length < 5) {
+					return '用户名至少得5个字符啊';
+				}
+			} */
+		});
+		/**
+		 * 监听省份选择
+		 */
+		form.on('select(province)', function (data) {
+			$.post('/api/region/index', {
+				code: data.value,
+				type: 2
+			}, function (data) {
+				var res = data.data;
+				if (data.code == 0) {
+					if (res.length > 0) {
+						var option = '<option value="">请选择市</option>';
+						res.forEach(function (v, i) {
+							option += '<option value="' + v.region_code + '">' + v
+								.region_name + '</option>';
+						});
+						$('#city').html(option);
+						$('#county').html('<option value="">请选择区/县</option>');
+						form.render('select');
+					}
+				} else {
+					layer.msg(data.msg);
+				}
+			}, 'json');
+		});
+		/**
+		 * 监听城市选择
+		 */
+		form.on('select(city)', function (data) {
+			$.post('/api/region/index', {
+				code: data.value,
+				type: 2
+			}, function (data) {
+				var res = data.data;
+				if (data.code == 0) {
+					if (res.length > 0) {
+						var option = '<option value="">请选择区/县</option>';
+						res.forEach(function (v, i) {
+							option += '<option value="' + v.region_code + '">' + v
+								.region_name + '</option>';
+						});
+						$('#county').html(option);
+						form.render('select');
+					}
+				} else {
+					layer.msg(data.msg);
+				}
+			}, 'json');
+		});
+		/**
+		 * 监听表单提交
+		 */
+		form.on('submit(toSubmit)', function (data) {
+			var params = {
+				name: data.field.name,
 				nickName: data.field.nickName,
 				phone: data.field.phone,
 				company: data.field.company,
@@ -152,22 +167,23 @@ layui.use(['form','layer'], function(){
 				city: data.field.city,
 				county: data.field.county
 			};
-		$.post('/admin/mechanic/addMechanic', params, function(data){
-            var res = data.data;
-            if(data.code == 200){
-				layer.msg('添加成功',{
-					icon:1,
-					time:1000
-				},function(){
-					x_admin_close();
-					parent.location.reload();
-				});
-            }else{
-                layer.msg(data.msg);
-            }
-		},'json');
-		return false;
+			$.post('/admin/mechanic/addMechanic', params, function (data) {
+				var res = data.data;
+				if (data.code == 200) {
+					layer.msg('添加成功', {
+						icon: 1,
+						time: 1000
+					}, function () {
+						x_admin_close();
+						parent.location.reload();
+					});
+				} else {
+					layer.msg(data.msg);
+				}
+			}, 'json');
+			return false;
+		});
 	});
-});
 </script>
+
 </html>
