--- a/application/admin/view/building/log_edit.html
+++ b/application/admin/view/building/log_edit.html
@@ -77,7 +77,7 @@ layui.use(['form','layer'], function(){
 				id: data.field.id,
 				village_id:data.field.village_id
 			};
-		$.post('/admin/building/editLog', params, function(data){
+		$.post('/admin/building/logEdit', params, function(data){
             var res = data.data;
             if(data.code == 200){
                 layer.msg('修改成功',{
