--- a/application/admin/view/check/edit.html
+++ b/application/admin/view/check/edit.html
@@ -55,7 +55,7 @@
 				checked: data.field.checked ? 1 : 2
 			};
 			if (uid != '') {
-				$.post('/admin/check/update?id=' + data.field.id + '&uid=' + uid + '$type=' + data.field
+				$.post('/admin/check/edit?id=' + data.field.id + '&uid=' + uid + '$type=' + data.field
 					.type, params,
 					function (data) {
 						var res = data.data;
@@ -78,7 +78,7 @@
 						}
 					}, 'json');
 			} else {
-				$.post('/admin/check/update?id=' + data.field.id + '&type=' + data.field.type, params,
+				$.post('/admin/check/edit?id=' + data.field.id + '&type=' + data.field.type, params,
 					function (data) {
 						var res = data.data;
 						if (data.code == 200) {
