--- a/application/admin/view/community/index.html
+++ b/application/admin/view/community/index.html
@@ -36,7 +36,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/community/index_list' //数据接口
+            , url: '/admin/community/index' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
