--- a/application/admin/view/mechanic/edit.html
+++ b/application/admin/view/mechanic/edit.html
@@ -167,7 +167,7 @@ layui.use(['form','layer'], function(){
 				county: data.field.county,
 				id: data.field.id
 			};
-		$.post('/admin/mechanic/editMechanic', params, function(data){
+		$.post('/admin/mechanic/edit', params, function(data){
             var res = data.data;
             if(data.code == 200){
                 layer.msg('修改成功',{
