--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -28,7 +28,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/system/setting_list' //数据接口
+            , url: '/admin/system/setting' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
