--- a/application/admin/view/review/index.html
+++ b/application/admin/view/review/index.html
@@ -43,7 +43,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/review/indexList?type='+type+'&is_reply='+is_reply //数据接口
+            , url: '/admin/review/index?type='+type+'&is_reply='+is_reply //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
