--- a/application/admin/view/cases/index.html
+++ b/application/admin/view/cases/index.html
@@ -54,7 +54,7 @@
                         , { field: 'case_title', title: '案例名', width: '10%' }
                         , { field: 'region', title: '所属站点', width: '12%' }
                         , { field: 'village_name', title: '小区名', width: '10%' }
-                        , { field: 'uname', title: type, width: '8%' }
+                        , { field: 'uname', title: name, width: '8%' }
                         , { field: 'view_num', title: '浏览数', width: '6%' }
                         , { field: 'collect_num', title: '收藏数', width: '6%' }
                         , { field: 'sort', title: '排序', width: '6%' }
