--- a/application/admin/view/mechanic/index.html
+++ b/application/admin/view/mechanic/index.html
@@ -74,7 +74,7 @@
                 elem: '#demo'
                 , toolbar: '#toolbarDemo'
                 , defaultToolbar: []
-                , url: '/admin/Mechanic/indexList?type='+type //数据接口
+                , url: '/admin/Mechanic/index?type='+type //数据接口
                 , page: true //开启分页
                 , limit: 20
                 , id: 'test'
@@ -105,7 +105,7 @@
                 elem: '#demo'
                 , toolbar: '#toolbarDemo'
                 , defaultToolbar: []
-                , url: '/admin/Mechanic/indexList?type='+type //数据接口
+                , url: '/admin/Mechanic/index?type='+type //数据接口
                 , page: true //开启分页
                 , limit: 20
                 , id: 'test'
@@ -138,7 +138,7 @@
                 elem: '#demo'
                 , toolbar: '#toolbarDemo'
                 , defaultToolbar: []
-                , url: '/admin/Mechanic/indexList?type='+type //数据接口
+                , url: '/admin/Mechanic/index?type='+type //数据接口
                 , page: true //开启分页
                 , limit: 20
                 , id: 'test'
