--- a/application/admin/view/review/reply.html
+++ b/application/admin/view/review/reply.html
@@ -77,7 +77,7 @@ KindEditor.ready(function (K) {
 				id: data.field.id,
 				reply:data.field.reply
 			};
-			$.post('/admin/review/replyDetail', params, function (data) {
+			$.post('/admin/review/reply', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
 					layer.msg('修改成功', {
