--- a/application/admin/view/building/log.html
+++ b/application/admin/view/building/log.html
@@ -51,7 +51,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工地\',\'/admin/building/logEdit?id=' + d.id +'&village_id=' + id + '\',800,480);">编辑</button>' +
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工地日记\',\'/admin/building/logEdit?id=' + d.id +'&village_id=' + id + '\',800,480);">编辑</button>' +
                                 '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delLog(' + d.id + ');">删除</button>';
                             return handle;
                         }
