--- a/application/admin/view/building/add.html
+++ b/application/admin/view/building/add.html
@@ -7,6 +7,7 @@
 	</style>
 	<div class="x-body">
 		<div class="layui-form">
+			{if $user['county'] == ''}
 			<div class="layui-form-item" id="region">
 				<label class="layui-form-label">地&nbsp;&nbsp;&nbsp;区</label>
 				<div class="layui-input-inline">
@@ -28,6 +29,11 @@
 					</select>
 				</div>
 			</div>
+			{else}
+				<input type="hidden" name="province" value="{$user['province']}" />
+				<input type="hidden" name="city" value="{$user['city']}" />
+				<input type="hidden" name="county" value="{$user['county']}" />
+			{/if}
 			<div class="layui-form-item" id="region">
 				<label class="layui-form-label">装饰公司</label>
 				<div class="layui-input-inline">
@@ -49,7 +55,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">建筑面积</label>
 				<div class="layui-input-block">
-					<input type="text" id="" name="@appear-cancelled="""  autocomplete="off"
+					<input type="text" id="" name="area"  autocomplete="off"
 						placeholder="请输入建筑面积" class="layui-input">
 				</div>
 			</div>
