--- a/application/admin/view/building/index.html
+++ b/application/admin/view/building/index.html
@@ -11,13 +11,13 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" onclick="delAll()">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加工地','buildingAdd.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加工地','buildingAdd.html',800,480)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加工地
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索小区','search.html',800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索工地','search.html',400,280)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
@@ -45,7 +45,7 @@
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
                     , { field: 'city', title: '城市', width: '15%' }
-                    , { field: 'village_name', title: '小区名称', width: '15%' }
+                    , { field: 'village_name', title: '工地名称', width: '15%' }
                     , { field: 'area', title: '面积', width: '15%', }
                     , { field: 'price', title: '价格', width: '15%', }
                     , { field: 'speed_name', title: '进度', width: '15%', }
