--- a/application/admin/view/company/attr.html
+++ b/application/admin/view/company/attr.html
@@ -6,21 +6,23 @@
 </style>
 <body>
     <div class="x-body">
-        <table id="demo" lay-filter="test"></table>
+        <div class="layui-form">
+            <table id="demo" lay-filter="test"></table>
+        </div>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商家','shopAdd.html',820,500)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加商家
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加属性','attrAdd.html',600,400)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加属性
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商家','search.html',800,500)">
+                <!-- <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索属性','search.html',800,500)">
                     <i class="layui-icon layui-icon-search"></i>搜索
-                </button>
+                </button> -->
             </div>
         </script>
     </div>
@@ -37,35 +39,44 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/shop/index' //数据接口
+            , url: '/admin/company/attr' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
             , cols: [
                 [ //表头
-                    { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'name', title: '商家名称', width: '15%' }
-                    , { field: 'cate_title', title: '所属分类', width: '15%' }
-                    , { field: 'citys', title: '所属城市', width: '15%',
+                    { type: 'checkbox', fixed: 'left',width:'5%' }
+                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left',
                         templet:function(d){
-                            return d.province_name+'-'+d.city_name+'-'+d.county_name;
+                            return d.LAY_INDEX;
                         }
                     }
-                    , { field: 'realname', title: '所属用户', width: '10%'}
-                    , { field: 'mobile', title: '联系电话', width: '10%'}
+                    , { field: 'type', title: '属性名称', width: '10%',
+                        templet:function(d){
+                            var type = '';
+                            if(d.type == '4'){
+                                type = '服务';
+                            }else if(d.type == '5'){
+                                type = '规模';
+                            }
+                            return type;
+                        }
+                    }
+                    , { field: 'title', title: '属性值', width: '25%' }
+                    , { field: 'sort', title: '排序', width: '10%' }
+                    , { field: 'status', title: '是否启用', width: '15%',
+                        templet:function(d){
+                            var can_used = '<div class="layui-input-inline">' +
+                                '<input type="checkbox" name="status" value="0" lay-skin="switch" lay-text="启用|关闭" lay-filter="cc" data-user-id="' + d.id + '" ' + (d.status == 0 ? 'checked' : '') + ' />' +
+                                '</div>';
+                            return can_used;
+                        }
+                    }
                     , { field: 'create_time', title: '创建时间', width: '15%', }
                     , {
-                        field: 'handle', title: '操作',width: '20%',
+                        field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500);">商品</button>';
-                            if(d.realname){
-                                var type = '解绑用户';
-                            }else{
-                                var type = '绑定用户';
-                            }
-                            handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500);">用户</button>'+
-                            '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑属性\',\'/admin/company/attrEdit?id=' + d.id + '\',600,400);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
@@ -89,6 +100,21 @@
                     break;
             };
         });
+        /**
+         * 监听状态改变
+        */
+        form.on('switch(cc)', function (data) {
+            var t = data.elem;
+            var id = $(t).attr('data-user-id');
+            $.post('/admin/company/updateStatus', { id: id }, function (j) {
+                if (j.code == '200') {
+                    layer.msg('设置成功');
+                }
+                if (j.code == '0') {
+                    layer.msg('设置失败');
+                }
+            }, 'json');
+        });
     });
     /**
      * 批量删除
@@ -99,7 +125,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/shop/deleteShop', { id: argument }, function (j) {
+                $.post('/admin/company/attrDel', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -116,7 +142,7 @@
     */
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/shop/deleteShop', { id: id }, function (j) {
+            $.post('/admin/company/attrDel', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
