--- a/application/admin/view/company/search.html
+++ b/application/admin/view/company/search.html
@@ -7,20 +7,20 @@
         }
     </style>
     <div class="x-body">
-        <div class="layui-form" id='searchForm'>
+        <form class="layui-form" id='searchForm'>
             <div class="layui-form-item">
-                <label class="layui-form-label">关键词</label> 
+                <label class="layui-form-label">关键词</label>
                 <div class="layui-input-block">
                     <input type="text" id="keywords" name="keywords" autocomplete="off"
                         placeholder="请输入关键词" class="layui-input" value="" />
-                </div> 
+                </div>
             </div>
             {if $user['county'] == ''}
 			<div class="layui-form-item" id="region">
 				<label class="layui-form-label">地&nbsp;&nbsp;&nbsp;区</label>
 				<div class="layui-input-inline">
 					<select name="province" lay-filter="province" id="province" >
-						<option value="">请选择省</option>
+						<option value="">请选择省</option> 
 						{volist name='regin' id='vo'}
 						<option value="{$vo.region_code}">{$vo.region_name}</option>
 						{/volist}
@@ -38,17 +38,17 @@
 				</div>
             </div>
             {else}
-                <input type="hidden" name="province" value="{$user['province']}" />
-                <input type="hidden" name="city" value="{$user['city']}" />
-                <input type="hidden" name="county" value="{$user['county']}" />
-            {/if}
+				<input type="hidden" name="province" value="{$user['province']}" />
+				<input type="hidden" name="city" value="{$user['city']}" />
+				<input type="hidden" name="county" value="{$user['county']}" />
+			{/if}
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-submit lay-filter="searchSubmit">提交</button>
                     <button type="reset" id="reset" class="layui-btn layui-btn-primary">重置</button>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 </body>
 {include file='public/foot'}
@@ -79,56 +79,54 @@
             return false;
         });
 
-        	/*
-	* 监听省份选择
-	*/
-	form.on('select(province)',function(data){
-        $.post('/api/region/index', { 
-            code: data.value,
-            type:2 
-        }, function(data){
-            var res = data.data;
-            if(data.code == 0){
-                if(res.length > 0){
-                    var option = '<option value="">请选择市</option>';
-                    res.forEach(function(v,i){
-                        option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
-                    });
-                    $('#city').html(option);
-                    $('#county').html('<option value="">请选择区/县</option>');
-                    form.render('select');
+        /*
+        * 监听省份选择
+        */
+        form.on('select(province)',function(data){
+            $.post('/api/region/index', { 
+                code: data.value,
+                type:2 
+            }, function(data){
+                var res = data.data;
+                if(data.code == 0){
+                    if(res.length > 0){
+                        var option = '<option value="">请选择市</option>';
+                        res.forEach(function(v,i){
+                            option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
+                        });
+                        $('#city').html(option);
+                        $('#county').html('<option value="">请选择区/县</option>');
+                        form.render('select');
+                    }
+                }else{
+                    layer.msg(data.msg);
                 }
-            }else{
-                layer.msg(data.msg);
-            }
-        },'json');
-	});
-	/*
-	* 监听城市选择
-	*/
-	form.on('select(city)',function(data){
-        $.post('/api/region/index', { 
-            code: data.value,
-            type:2 ,
-            is_open:2
-        }, function(data){
-            var res = data.data;
-            if(data.code == 0){
-                if(res.length > 0){
-                    var option = '<option value="">请选择区/县</option>';
-                    res.forEach(function(v,i){
-                        option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
-                    });
-                    $('#county').html(option);
-                    form.render('select');
+            },'json');
+        });
+        /*
+        * 监听城市选择
+        */
+        form.on('select(city)',function(data){
+            $.post('/api/region/index', { 
+                code: data.value,
+                type:2 
+            }, function(data){
+                var res = data.data;
+                if(data.code == 0){
+                    if(res.length > 0){
+                        var option = '<option value="">请选择区/县</option>';
+                        res.forEach(function(v,i){
+                            option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
+                        });
+                        $('#county').html(option);
+                        form.render('select');
+                    }
+                }else{
+                    layer.msg(data.msg);
                 }
-            }else{
-                layer.msg(data.msg);
-            }
-        },'json');
+            },'json');
+        });
     });
-    });
-    $("#reset").on("click",function(){ window.location.reload();});
 </script>
 
 </html>
