--- a/application/admin/view/mechanic/index.html
+++ b/application/admin/view/mechanic/index.html
@@ -61,7 +61,7 @@
                         , {
                             field: 'handle', title: '操作',
                             templet: function (d) {
-                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
+                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑设计师\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
                                     '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCommunity(' + d.id + ');">删除</button>';
                                 return handle;
                             }
@@ -92,7 +92,7 @@
                         , {
                             field: 'handle', title: '操作',
                             templet: function (d) {
-                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑设计师\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
+                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑技工\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
                                     '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCommunity(' + d.id + ');">删除</button>';
                                 return handle;
                             }
@@ -125,7 +125,7 @@
                         , {
                             field: 'handle', title: '操作',
                             templet: function (d) {
-                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑设计师\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
+                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工长\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
                                     '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCommunity(' + d.id + ');">删除</button>';
                                 return handle;
                             }
@@ -156,7 +156,7 @@
                         , {
                             field: 'handle', title: '操作',
                             templet: function (d) {
-                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑设计师\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
+                                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑装饰公司\',\'/admin/mechanic/edit?id=' + d.id + '&type='+type+'\',800,480);">编辑</button>' +
                                     '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCommunity(' + d.id + ');">删除</button>';
                                 return handle;
                             }
